Grant non-reviewers overrideTaxa privileges